Bug 104066 - [CI] igt@pm_rpm@system-suspend - incomplete - system hang/timeout
Summary: [CI] igt@pm_rpm@system-suspend - incomplete - system hang/timeout
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-04 11:35 UTC by Marta Löfstedt
Modified: 2018-02-09 07:12 UTC (History)
1 user (show)

See Also:
i915 platform: GLK
i915 features: power/runtime PM


Attachments

Description Marta Löfstedt 2017-12-04 11:35:46 UTC
This is already filed on the generic GLK-shard incomplete bug 103359. However, looking at:

https://intel-gfx-ci.01.org/tree/drm-tip/igt@pm_rpm@system-suspend.html
this incomplete is very frequent on GLK-shards from CI_DRM_3432 and onwards so it deserves its own bug. 

examples:
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3432/shard-glkb5/igt@pm_rpm@system-suspend.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3447/shard-glkb5/igt@pm_rpm@system-suspend.html
Comment 1 Chris Wilson 2017-12-19 23:12:10 UTC
Possibly:

commit 16c8619a7c53fe05526c31d4758be0eeabd16364
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Dec 19 22:09:16 2017 +0000

    drm/i915: Avoid context dereference inside execlists_submission_tasklet
    
    A lesson that has to be relearnt over and over again is that the request
    does not keep a reference to the context and so we cannot freely
    dereference the context from inside the execlists_submission_tasklet. In
    particular, we try to do so in the new GEM_TRACE() so convert those over
    to the port->context_id we keep for GEM debugging. This means the
    tracing now depends on DRM_I915_GEM_DEBUG.
    
    Fixes: bccd3b831185 ("drm/i915: Use trace_printk to provide a death rattle for GEM")
    References: https://bugs.freedesktop.org/show_bug.cgi?id=104066
    References: https://bugs.freedesktop.org/show_bug.cgi?id=104162
    References: https://bugs.freedesktop.org/show_bug.cgi?id=104242
    References: https://bugs.freedesktop.org/show_bug.cgi?id=104310
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Mika Kuoppala <mika.kuoppala@linux.intel.com>
    Cc: Joonas Lahtinen <joonas.lahtinen@linux.intel.com>
    Cc: Tvrtko Ursulin <tvrtko.ursulin@intel.com>
    Reviewed-by: Michel Thierry <michel.thierry@intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20171219220916.30882-1-chris@chris-wilson.co.uk
Comment 2 Marta Löfstedt 2018-02-09 07:11:53 UTC
Last seen CI_DRM_3595: 2018-01-03 / 236 runs ago


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.